# jooojub-pico-ai-assistant

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
doc/: memo
examples/: LCD_Test.h
service/: README.md  api.py  docker-compose.yml  main.py  requirements.txt  serial_bridge.py
src/: app.c  app.h
